--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Nolan Clark - Blog"
 title_separator          : "-"
 name                     : "Nolan Clark"
 description              : "Personal Blog"
-url                      : "blog.nolanclark.co"
+url                      : "nolanmclark.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
