--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Nolan Clark - Blog"
+title                    : "Nolan Clark - Web Designer and Developer"
 title_separator          : "-"
 name                     : "Nolan Clark"
 description              : "Personal Blog"
