--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Nolan Clark"
-  avatar           : "http://nolanclark.co/images/bio-picture.jpg"
+  avatar           : "http://nolanclark.co/images/bio-picture.png"
   bio              : "Designer & Developer"
   location         : "Omaha, NE"
   email            : "nolan@nolanclark.co"
