--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
-main:
-  - title: "Sample Navigation Link"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/navigation/
+main
+  - title: "Home"
+    url: https://www.nolanclark.co
 
-  - title: "Sample Navigation Link 2"
+  - title: /
     url: /
