--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Designer & Developer"
   location         : "Omaha, NE"
   email            : "nolan@nolanclark.co"
-  uri              :
+  uri              : "http://nolanclark.co"
   bitbucket        :
   codepen          :
   dribbble         :
