--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Nolan Clark - Web Designer and Developer"
 title_separator          : "-"
 name                     : "Nolan Clark"
-description              : "Personal Blog"
+description              : "Web Blog"
 url                      : "www.nolanmclark.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
