--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Nolan Clark - Web Designer and Developer"
 title_separator          : "-"
 name                     : "Nolan Clark"
 description              : "Web Blog"
-url                      : "nolanmclark.github.io"
+url                      : "http://nolanmclark.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "http://nolanclark.co/images/teaser.png"
