--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,4 +4,6 @@ main:
     url: http://nolanclark.co
   - title: "Blog"
     url: http://blog.nolanclark.co
+  - title: "Projects"
+    url: http://blog.nolanclark.co/projects/
    
